# Telegrip

./: .gitignore  .gitmodules  MIGRATION_TO_MINK.md  MUJOCO_LOG.TXT  README.md  aframe-master.min.js  cert.pem  config.yaml  config_arm620.yaml  key.pem  pyproject.toml  read_pose.py  reference_poses.json  reference_poses_arm620.json  requirements-dev.txt  requirements.txt  yes  yes.pub
examples/: test_mink_integration.py  vr_teleoperate_arm620.py
gnirehtet-rust-linux64/arm64/: gnirehtet
runs/mink_tuning/: result_eval_gui.json  trajectory_eval_gui.csv
telegrip/: __init__.py  config.py  control_loop.py  http_api.py  main.py  runtime.py  utils.py
telegrip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
telegrip/core/: __init__.py  kinematics.py  mink_kinematics.py  robot_interface.py  teleop_frame_mapper.py  visualizer.py
telegrip/inputs/: __init__.py  base.py  vr_ws_server.py  web_keyboard.py
tools/: mink_tune_runner.py
web-ui/: index.html  interface.js  styles.css  vr_app.js
